--- a/docs/data_catalog/frontend/overview.mdx
+++ b/docs/data_catalog/frontend/overview.mdx
@@ -16,12 +16,10 @@ via [Fabric BFF](/data_catalog/data_catalog_fabric_bff.mdx) component.
 
 ## Features
 
-Mia-Platform Data Catalog frontend offers  
-
-The frontend offers a user-friendly UI having:
+Mia-Platform Data Catalog frontend offers a user-friendly UI having:
 
 * an [Asset Discovery section](/data_catalog/frontend/data_catalog_assets.mdx)  that allows users to navigate data assets and to perform a series of actions useful for data governance and metadata enrichment;
-* a [Data Lineage section](/data_catalog/frontend/data_lineage.mdx) that allows users to create relations between real and virtual assets;
+* a [Data Lineage section](/data_catalog/frontend/data_lineage.mdx) that allows users to understand, visualize, and describe the flow and transformations of data within an organization;
 * a [Connections section](/data_catalog/frontend/data_catalog_connections.mdx) that allows users to manage the connections used to retrieve assets.
 
 ## Configuration
@@ -29,7 +27,7 @@ The frontend offers a user-friendly UI having:
 <!---
 DA FARNE UNA REVIEW-->
 
-In this section is explained how the Control Plane service should be configured in order to properly satisfy the requests.
+In this section is explained how the Data Catalog Frontend service should be configured in order to properly satisfy the requests.
 
 ### Environment Variables
 
